--- a/whenwhere.cf/manifest.json
+++ b/whenwhere.cf/manifest.json
@@ -5,10 +5,10 @@
     "display" : "standalone",
     "start_url" : "https://whenwhere.cf/",
     "short_name" : "WhenWhere",
-    "theme_color" : "transparent",
-    "description" : "",
+    "theme_color" : "grey",
+    "description" : "Offline mapless navigator using Plus codes",
     "orientation" : "any",
-    "background_color" : "transparent",
+    "background_color" : "white",
     "related_applications" : "",
     "prefer_related_applications" : "false",
     "generated" : "true",
