--- a/whenwhere.cf/manifest.json
+++ b/whenwhere.cf/manifest.json
@@ -5,51 +5,48 @@
     "display" : "standalone",
     "start_url" : "https://whenwhere.cf/",
     "short_name" : "WhenWhere",
-    "theme_color" : "grey",
+    "theme_color" : "white",
     "description" : "Offline mapless navigator using Plus codes",
     "orientation" : "any",
     "background_color" : "white",
-    "related_applications" : "",
-    "prefer_related_applications" : "false",
-    "generated" : "true",
   "icons": [
     {
-      "src": "images/icons/icon-72x72.png",
+      "src": "/images/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-96x96.png",
+      "src": "/images/icons/icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-128x128.png",
+      "src": "/images/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-144x144.png",
+      "src": "/images/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-152x152.png",
+      "src": "/images/icons/icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-192x192.png",
+      "src": "/images/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-384x384.png",
+      "src": "/images/icons/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-512x512.png",
+      "src": "/images/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
